# graphs

./: .envrc  .gitignore  README.md  justfile  justfile~  pyproject.toml
.github/workflows/: ci.yaml
graphs/: exceptions.py  generator.py  graph.py  symgraph.py
tests/: test_graph.py
typings/sympy/: __init__.pyi  abc.pyi  conftest.pyi  this.pyi
typings/sympy/algebras/: __init__.pyi  quaternion.pyi
typings/sympy/assumptions/: __init__.pyi  ask.pyi  ask_generated.pyi  assume.pyi  cnf.pyi  facts.pyi  lra_satask.pyi  refine.pyi  satask.pyi  sathandlers.pyi  wrapper.pyi
typings/sympy/calculus/: __init__.pyi  accumulationbounds.pyi  euler.pyi  finite_diff.pyi  singularities.pyi  util.pyi
typings/sympy/categories/: __init__.pyi  baseclasses.pyi  diagram_drawing.pyi
typings/sympy/codegen/: __init__.pyi  abstract_nodes.pyi  ast.pyi  cfunctions.pyi  cnodes.pyi  fnodes.pyi  pynodes.pyi
typings/sympy/combinatorics/: __init__.pyi  coset_table.pyi  fp_groups.pyi  free_groups.pyi  galois.pyi  generators.pyi  graycode.pyi  group_constructs.pyi  homomorphisms.pyi  named_groups.pyi  partitions.pyi  pc_groups.pyi  perm_groups.pyi  permutations.pyi  polyhedron.pyi  prufer.pyi  rewritingsystem.pyi  rewritingsystem_fsm.pyi  subsets.pyi  tensor_can.pyi  testutil.pyi  util.pyi
typings/sympy/concrete/: __init__.pyi  delta.pyi  expr_with_intlimits.pyi  expr_with_limits.pyi  gosper.pyi  products.pyi  summations.pyi
typings/sympy/core/: __init__.pyi  _print_helpers.pyi  add.pyi  alphabets.pyi  assumptions.pyi  assumptions_generated.pyi  backend.pyi  basic.pyi  cache.pyi  containers.pyi  core.pyi  coreerrors.pyi  decorators.pyi  evalf.pyi  expr.pyi  exprtools.pyi  facts.pyi  function.pyi  intfunc.pyi  kind.pyi  logic.pyi  mod.pyi  mul.pyi  multidimensional.pyi  numbers.pyi  operations.pyi  parameters.pyi  power.pyi  random.pyi  relational.pyi  rules.pyi  singleton.pyi  sorting.pyi  symbol.pyi  sympify.pyi  traversal.pyi
typings/sympy/crypto/: __init__.pyi  crypto.pyi
typings/sympy/diffgeom/: __init__.pyi  diffgeom.pyi
typings/sympy/discrete/: __init__.pyi  convolutions.pyi  recurrences.pyi  transforms.pyi
typings/sympy/functions/: __init__.pyi
typings/sympy/geometry/: __init__.pyi  curve.pyi  ellipse.pyi  entity.pyi  exceptions.pyi  line.pyi  parabola.pyi  plane.pyi  point.pyi  polygon.pyi  util.pyi
typings/sympy/holonomic/: __init__.pyi  holonomic.pyi  holonomicerrors.pyi  numerical.pyi  recurrence.pyi
typings/sympy/integrals/: __init__.pyi  deltafunctions.pyi  heurisch.pyi  integrals.pyi  laplace.pyi  manualintegrate.pyi  meijerint.pyi  prde.pyi  rationaltools.pyi  rde.pyi  risch.pyi  singularityfunctions.pyi  transforms.pyi  trigonometry.pyi
typings/sympy/interactive/: __init__.pyi  printing.pyi  session.pyi  traversal.pyi
typings/sympy/liealgebras/: __init__.pyi  cartan_type.pyi  type_a.pyi  type_b.pyi  type_c.pyi  type_d.pyi  type_e.pyi  type_f.pyi  type_g.pyi
typings/sympy/logic/: __init__.pyi  boolalg.pyi  inference.pyi
typings/sympy/matrices/: __init__.pyi  dense.pyi  eigen.pyi  exceptions.pyi  immutable.pyi  kind.pyi  matrixbase.pyi  normalforms.pyi  repmatrix.pyi  sparse.pyi  sparsetools.pyi  utilities.pyi
typings/sympy/multipledispatch/: __init__.pyi  conflict.pyi  core.pyi  dispatcher.pyi  utils.pyi
typings/sympy/ntheory/: __init__.pyi  digits.pyi  ecm.pyi  (+10 more)
(+414 files in other folders)
