[project]
name = "graphs"
version = "0.1.0"
description = "A research-oriented graph theory toolset"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.13.15",
    "mypy>=1.16.0",
    "networkx>=3.5",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true

[tool.pyright]
include = ["graphs"]
typeCheckingMode = "strict"
reportMissingTypeStubs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --tb=short -q"
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["I", "N", "D"]
fixable = ["ALL"]
unfixable = []
select = ["ALL"]
ignore = []
