[project]
name = "graphs"
version = "0.1.0"
description = "A research-oriented graph theory toolset"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.13.15",
    "more-itertools>=10.7.0",
    "mypy>=1.16.0",
    "networkx>=3.5",
    "numpy>=2.2.6",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
    "sympy>=1.14.0",
    "loguru>=0.7.3",
    "pdbp>=1.7.0",
    "hypothesis[cli]>=6.135.14",
    "slipcover>=1.0.16",
]

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
unsafe-fixes = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
extend-select = ["I", "N", "D"]
fixable = ["ALL"]
unfixable = []
select = ["ALL"]
ignore = [
  "D203", "D212", "COM812", "S101",
  # Docstring-related rules:
  "D104", "D100", "D103", "D101", "D107", "D102", "D105"
]

[tool.ruff.lint.isort]
# Use a single line after each import block.
lines-after-imports = 2

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
mypy_path = ["typings"]

[[tool.mypy.overrides]]
module = "sympy.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["pdbp.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["graphs", "tests"]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
venvPath = "/home/vaibhav/projects/graphs/"
venv = ".venv"
stubPath = "typings"
pythonVersion = "3.13"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --tb=short -q"
testpaths = ["tests"]
